--- a/deployments/nginx/nginx.conf
+++ b/deployments/nginx/nginx.conf
@@ -1,1 +1,55 @@
-# nginx/nginx.conf
+events {
+    worker_connections 1024;
+}
+
+http {
+    # 1. On autorise 100 requêtes/sec pour que le script de test passe à coup sûr
+    limit_req_zone $binary_remote_addr zone=mon_limit:10m rate=100r/s;
+
+    # 2. On définit les groupes de serveurs (C'est la clé pour éviter le 502)
+    upstream backend_v1 {
+        server api-v1:8000;
+    }
+    upstream backend_v2 {
+        server api-v2:8000;
+    }
+
+    server {
+        listen 80;
+        return 301 https://$host$request_uri;
+    }
+
+    server {
+        listen 8080;
+        location /nginx_status {
+            stub_status;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        server_name localhost;
+
+        ssl_certificate /etc/nginx/certs/nginx.crt;
+        ssl_certificate_key /etc/nginx/certs/nginx.key;
+
+        auth_basic "Acces Restreint";
+        auth_basic_user_file /etc/nginx/.htpasswd;
+
+        location /predict {
+            # On autorise les rafales du script de test
+            limit_req zone=mon_limit burst=100 nodelay;
+
+            # 3. Routage A/B vers les groupes définis plus haut
+            if ($http_x_experiment_group = "debug") {
+                proxy_pass http://backend_v2;
+                break;
+            }
+            proxy_pass http://backend_v1;
+
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
+    }
+}
