--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,36 @@
 services:
+  # L'API v1 avec ses 3 exemplaires
+  api-v1:
+    build: ./src/api/v1
+    deploy:
+      replicas: 3
+
+  # L'API v2 (Debug)
+  api-v2:
+    build: ./src/api/v2
+
+  # La Gateway Nginx
+  nginx:
+    build: ./deployments/nginx
+    ports:
+      - "80:80"
+      - "443:443"
+
+  # Monitoring
   prometheus:
-    image: prom/prometheus:latest
-    container_name: prometheus_server
+    image: prom/prometheus
+    volumes:
+      - ./deployments/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
       - "9090:9090"
-    volumes:
-      - ./deployments/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
-      - prometheus_data:/prometheus
-    depends_on:
-      - nginx
 
   grafana:
-    image: grafana/grafana:latest
-    container_name: grafana_dashboard
+    image: grafana/grafana
     ports:
       - "3000:3000"
-    volumes:
-      - grafana_data:/var/lib/grafana
+  nginx-exporter:
+    image: nginx/nginx-prometheus-exporter:latest
+    command:
+      - -nginx.scrape-uri=http://nginx:8080/nginx_status
     depends_on:
-      - prometheus
-    environment:
-      - GF_SECURITY_ADMIN_USER=admin
-      - GF_SECURITY_ADMIN_PASSWORD=admin
-
-volumes:
-  prometheus_data:
-  grafana_data:
+      - nginx
